<resources>
    <string name="app_name">WeatherApp</string>
    <string name="check_internet_connections">Check Internet Connections</string>
    <string name="find_the_weather_of_your_location">Find \nThe Weather Of Your Location</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="search_location">Search Location...</string>
    <string name="search_history">Search History</string>
    <string name="clear">Clear</string>
    <string name="search_for_a_city">Search for a city</string>
    <string name="next_5_days_forecast">Next 5 days Forecast</string>
    <string name="current_label">Current</string>
    <string name="wind_label">Wind</string>
    <string name="humidity_label">Humidity</string>
    <string name="zero_label">0%d</string>
    <string name="wind_unit_label">%.0f km/hr</string>
    <string name="today">Today</string>
    <string name="settings">Settings</string>
    <string name="choose_the_temperature_unit">Choose The Temperature Unit</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="choose_language">Choose Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>


</resources>